--- a/style.css
+++ b/style.css
@@ -24,5 +24,30 @@ background: #ebebeb;
 .nav2{
     background: none;
     border: none;
-    margin-right: 245px;
+
+}
+.nav2 li{
+    -webkit-box-sizing: content-box;
+    -moz-box-sizing: content-box;
+    box-sizing: content-box;
+    width: 166px;
+    height: 108px;
+    border: none;
+    font: normal 16px/1 "Times New Roman", Times, serif;
+    color: rgba(255,255,255,1);
+    text-align: center;
+    -o-text-overflow: ellipsis;
+    text-overflow: ellipsis;
+    background: -webkit-linear-gradient(-90deg, rgba(255,255,255,1) 0, #e7e7e7 100%);
+    background: -moz-linear-gradient(180deg, rgba(255,255,255,1) 0, #e7e7e7 100%);
+    background: linear-gradient(180deg, rgba(255,255,255,1) 0, #e7e7e7 100%);
+    background-position: 50% 50%;
+    -webkit-background-origin: padding-box;
+    background-origin: padding-box;
+    -webkit-background-clip: border-box;
+    background-clip: border-box;
+    -webkit-background-size: auto auto;
+    background-size: auto auto;
+    -webkit-box-shadow: 0 18px 0 0 #6017a3 ;
+    box-shadow: 0 18px 0 0 #6017a3 ;
 }
